implemented user status query, user storage and cleaned up the config file

--- a/config/server.toml
+++ b/config/server.toml
@@ -1,2 +1,7 @@
-[settings]
-rpc = "https://smartpass.link/"
+[web]
+rpc = "https://beta.smartpass.link/bc/ext/"
+web = "https://beta.smartpass.link/"
+
+[storage]
+user = "log/User.db"
+nft = "log/Store.db"
